# delt1

./: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
resources/: CMakeLists.txt
src/: AudioProcessing.cpp  AudioProcessing.h  AudioProcessingDerived.h  CMakeLists.txt  EditorCreation.cpp  EditorCreation.h  LSTMProcessing.cpp  LSTMProcessing.h  MidiProcessing.cpp  MidiProcessing.h  MyFlexBoxWrapper.h  PluginCreation.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorInit.cpp  PluginProcessorInit.h  Programs.cpp  Programs.h  ProteusAudioProcessorInit.cpp  RTNeuralLSTM.cpp  StateManagement.cpp  StateManagement.h  UtilityFunctions.cpp  UtilityFunctions.h
